--- a/static-website/Dockerfile
+++ b/static-website/Dockerfile
@@ -1,7 +1,5 @@
-FROM nginx:latest
+FROM nginx:1.15
 
 # Copy the html from our sample site 
 # into the nginx html directory
 COPY zeus-site/site /usr/share/nginx/html
-
-# TODO: Install config file
